# test-static-assert

./: .gitlab-ci.yml  README.md
examples/: CMakeLists.txt  foo.hpp  main_invalid.cpp  main_valid.cpp  unit_test.cpp
include/: enable_test_static_assert.hpp  test_static_assert.hpp
script/: examples.sh
